# 7S-generator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
corpusgen/: __init__.py  cli.py  content.py  coords.py  corpus.py  feed.py  generate.py  geo.py  mgrs.py  render.py  score.py  shell.py
corpusgen/gui/: __init__.py  app.html  server.py
tests/: test_coords.py  test_corpusgen.py  test_gui.py  test_score.py
