[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "7s-generator"
version = "0.1.0"
description = "Synthetic 7S report corpus generator (CLI) — normal activity, hostiles, protesters"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []  # standard library only

[project.scripts]
7s-generator = "corpusgen.cli:main"

[tool.setuptools]
packages = ["corpusgen"]
